--- a/app/components/signatures/signatures-filter-modal.hbs
+++ b/app/components/signatures/signatures-filter-modal.hbs
@@ -4,35 +4,32 @@
     <div class="auk-form-group">
       <Auk::CheckboxList>
         <Auk::Checkbox
-          @label="Jan Jambon"
+          @label="Jan Jambon, Minister-president van de Vlaamse Regering, Vlaams minister van Buitenlandse Zaken, Cultuur, ICT en Facilitair Management"
           @checked={{true}}
         />
         <Auk::Checkbox
-          @label="Hilde Crevits"
+          @label="Hilde Crevits, Vlaams minister van Economie, Innovatie, Werk, Sociale economie en Landbouw"
         />
         <Auk::Checkbox
-          @label="Bart Somers"
+          @label="Bart Somers, Vlaams minister van Binnenlands Bestuur, Bestuurszaken, Inburgering en Gelijke Kansen"
         />
         <Auk::Checkbox
-          @label="Ben Weyts"
+          @label="Ben Weyts, Vlaams minister van Onderwijs, Sport, Dierenwelzijn en Vlaamse Rand"
         />
         <Auk::Checkbox
-          @label="Zuhal Demir"
+          @label="Zuhal Demir, Vlaams minister van Justitie en Handhaving, Omgeving, Energie en Toerisme"
         />
         <Auk::Checkbox
-          @label="Wouter Beke"
+          @label="Wouter Beke, Vlaams minister van Welzijn, Volksgezondheid, Gezin en Armoedebestrijding"
         />
         <Auk::Checkbox
-          @label="Matthias Diependaele"
+          @label="Matthias Diependaele, Vlaams minister van Financiën en Begroting, Wonen en Onroerend Erfgoed"
         />
         <Auk::Checkbox
-          @label="Lydia Peeters"
+          @label="Lydia Peeters, Vlaams minister van Mobiliteit en Openbare Werken"
         />
         <Auk::Checkbox
-          @label="Benjamin Dalle"
-        />
-        <Auk::Checkbox
-          @label="Jeroen Overmere"
+          @label="Benjamin Dalle, Vlaams minister van Brussel, Jeugd en Media"
         />
       </Auk::CheckboxList>
     </div>
