--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -115,6 +115,16 @@
             {{/unless}}
           </Group.Item>
           {{#if this.signaturesEnabled}} {{! feature flag }}
+            {{#if this.loadSignatureRelatedData.isRunning }}
+              <div class="auk-loader au-u-margin-left-small" role="alert" aria-busy="true"></div>
+            {{/if}}
+            {{#if this.markOrUnmarkForSignature.isRunning }}
+              <div class="auk-loader au-u-margin-left-small" role="alert" aria-busy="true"></div>
+            {{/if}}
+            
+            {{#if this.loadPieceRelatedData.isRunning }}
+              <div class="auk-loader au-u-margin-left-small" role="alert" aria-busy="true"></div>
+            {{/if}}
             {{#if
               (and
                 (user-may "manage-signatures")
@@ -125,11 +135,13 @@
               <Group.Item>
                 {{#if (or (eq this.signatureRequested true) @signatureMockupAlt)}}
                 <SignaturePill
+                  @isLoading={{his.loadPieceRelatedData.isRunning}}
                   @isEditable={{true}}
                   @signatureMockupAlt={{@signatureMockupAlt}}
                 />
                 {{else if (or (eq this.signatureRequested true) @signatureMockup)}}
                 <SignaturePill
+                  @isLoading={{his.loadPieceRelatedData.isRunning}}
                   @isEditable={{true}}
                   @signatureMockup={{@signatureMockup}}
                 />
@@ -140,6 +152,7 @@
               {{#if (eq this.signatureRequested true)}}
               <Group.Item>
                 <SignaturePill
+                  @isLoading={{his.loadPieceRelatedData.isRunning}}
                   @isEditable={{false}}
                 />
               </Group.Item>
@@ -224,6 +237,50 @@
                   class="vlc-document-holder"
                   {{did-update (perform this.loadPieceRelatedData) piece}}
                 >
+                  {{#if (eq @signatureMockupAlt true)}}
+                  <div class="vlc-document-card-item">
+                    <div class="vlc-document-card-item__title">
+                      {{#if piece.file}}
+                        <LinkTo @route="document" @model={{piece.id}}
+                          class="auk-h4 auk-u-m-0 auk-u-mr-4 vlc-document-card-item__title-link"
+                          data-test-vl-document-name>
+                          {{piece.name}}{{#if piece.file}}.{{piece.file.extension}}{{/if}}
+                        </LinkTo>
+                      {{else}}
+                        <h6
+                          class="auk-h4 auk-u-m-0 auk-u-mr-4 vlc-document-card-item__title-link"
+                          data-test-vl-document-name
+                        >
+                          <EmberTooltip @side="bottom" @tooltipClass="auk-tooltip">
+                            {{t "document-not-consultable"}}
+                          </EmberTooltip>
+                          {{piece.name}}{{#if piece.file}}.{{piece.file.extension}}{{/if}}
+                        </h6>
+                      {{/if}}
+                      <div class="auk-o-flex auk-o-flex--spaced auk-o-flex--vertical-center">
+                        <AuPill @icon="sign">Getekend</AuPill>
+                        <AuPill
+                          @skin="warning"
+                          @icon="circle"
+                        >
+                          Intern regering
+                        </AuPill>
+                      </div>
+                    </div>
+                    <div class="vlc-document-card-item__meta au-u-muted">
+                      {{!-- no piece.created in legacy data --}}
+                      {{#if piece.created}}
+                        {{t "uploaded-at"}}
+                        {{moment-format piece.created}}
+                        {{t "at"}}
+                        {{moment-format piece.created "HH:mm"}}
+                      {{/if}}
+                    </div>
+                    <div class="vlc-document-card-item__icon">
+                      <Auk::Icon @name="clock-rewind" @size="small" />
+                    </div>
+                  </div>
+                  {{/if}}
                   <Documents::DocumentVersionHistoryItem
                     @piece={{piece}}
                     @agendaContext={{@agendaContext}}
