--- a/app/templates/agenda/notes.hbs
+++ b/app/templates/agenda/notes.hbs
@@ -11,6 +11,15 @@
             </Toolbar.Group>
             <Toolbar.Group @position="right" as |Group|>
               <Group.Item>
+                {{#if this.document}}
+                <AuButton
+                  @icon="pdf"
+                  @skin="naked"
+                  {{on "click" this.showVersion}}
+                >
+                  Exporteren als pdf
+                </AuButton>
+                {{else}}
                 <AuButton
                   @icon="pdf"
                   @skin="naked"
@@ -18,6 +27,7 @@
                 >
                   Exporteren als pdf
                 </AuButton>
+                {{/if}}
               </Group.Item>
               {{#unless this.isEditing}}
               <Group.Item>
@@ -117,6 +127,58 @@
                 </Auk::Toolbar>
               </div>
             </div>
+            {{#if this.version}}
+            <div class="vlc-document-card-versions">
+              <Auk::Accordion>
+                <Auk::Accordion::Item
+                  @title={{t "previous-versions"}}
+                  @disabled={{this.loadPieceRelatedData.isRunning}}
+                  @expandTask={{this.loadVersionHistory}}
+                  data-test-document-card-version-history
+                >
+                  {{#if this.loadVersionHistory.isRunning}}
+                    <div class="auk-u-p-3">
+                      <Auk::Loader />
+                    </div>
+                  {{else}}
+                    <div
+                      class="vlc-document-holder"
+                    >
+                      <div class="vlc-document-card-item">
+                        <div class="vlc-document-card-item__title">
+                          <LinkTo @route="document" @model={{piece.id}}
+                            class="auk-h4 auk-u-m-0 auk-u-mr-4 vlc-document-card-item__title-link">
+                            DOC.02032 — Notulen
+                          </LinkTo>
+                          <div class="auk-o-flex auk-o-flex--spaced auk-o-flex--vertical-center">
+                            <AuPill @icon="sign">Getekend</AuPill>
+                            <AuPill
+                              @skin="warning"
+                              @icon="circle"
+                            >
+                              Intern regering
+                            </AuPill>
+                          </div>
+                        </div>
+                        <div class="vlc-document-card-item__meta au-u-muted">
+                          {{!-- no piece.created in legacy data --}}
+                          {{#if piece.created}}
+                            {{t "uploaded-at"}}
+                            {{moment-format piece.created}}
+                            {{t "at"}}
+                            {{moment-format piece.created "HH:mm"}}
+                          {{/if}}
+                        </div>
+                        <div class="vlc-document-card-item__icon">
+                          <Auk::Icon @name="clock-rewind" @size="small" />
+                        </div>
+                      </div>
+                    </div>
+                  {{/if}}
+                </Auk::Accordion::Item>
+              </Auk::Accordion>
+            </div>
+            {{/if}}
           </div>
         </Auk::Panel::Body>
         {{/if}}
