--- a/app/components/search/document-type-filter.hbs
+++ b/app/components/search/document-type-filter.hbs
@@ -1,10 +1,10 @@
 <div class="au-c-card au-o-box au-o-box--small">
   <div class="auk-form-group">
     <Auk::Label>{{t "document-type"}}</Auk::Label>
-    <Auk::CheckboxList>
-      {{#if this.loadDocumentTypes.isRunning}}
-        <Auk::Loader />
-      {{else}}
+    {{#if this.loadDocumentTypes.isRunning}}
+      <Auk::Loader />
+    {{else}}
+      <AuCheckboxGroup> {{!-- Just use the group component here as a styling method as also using the included functionality would unnecessarily overcomplicate things --}}
         <AuCheckbox
           @checked={{this.allDocumentTypesSelected}}
           @indeterminate={{and
@@ -13,48 +13,48 @@
           }}
           @onChange={{this.toggleAllDocumentTypes}}
         >
-          <strong>{{t "all-document-types"}}</strong>
+          <span class="au-u-medium">{{t "all-document-types"}}</span>
         </AuCheckbox>
-        {{#each this.documentTypes as |documentType|}}
-          {{#if (includes documentType.uri this.defaultVisibleTypes)}}
-            <AuCheckbox
-              @checked={{includes documentType this.selected}}
-              @onChange={{fn this.toggleDocumentType documentType}}
-            >
-              {{documentType.altLabel}}
-            </AuCheckbox>
-          {{/if}}
-        {{/each}}
-        {{#if (not this.showAllTypes)}}
-          <AuButton
-            {{on "click" (toggle "showAllTypes" this)}}
-            @skin="link"
-            class="au-u-h-functional au-u-padding-left-none au-u-margin-top-tiny"
-            @icon="add"
-          >
-            {{t "show-all-document-types"}}
-          </AuButton>
-        {{else}}
+        <AuCheckboxGroup
+          @selected={{this.selected}}
+          as |Group|
+        >
           {{#each this.documentTypes as |documentType|}}
-            {{#if (not (includes documentType.uri this.defaultVisibleTypes))}}
-              <AuCheckbox
-                @checked={{includes documentType this.selected}}
+            {{#if (includes documentType.uri this.defaultVisibleTypes)}}
+              <Group.Checkbox
+                @value={{documentType}}
                 @onChange={{fn this.toggleDocumentType documentType}}
               >
                 {{documentType.altLabel}}
-              </AuCheckbox>
+              </Group.Checkbox>
             {{/if}}
           {{/each}}
-          <AuButton
-            {{on "click" (toggle "showAllTypes" this)}}
-            @skin="link"
-            class="au-u-h-functional au-u-padding-left-none au-u-margin-top-tiny"
-            @icon="remove"
-          >
-            {{t "hide-document-types"}}
-          </AuButton>
-        {{/if}}
-      {{/if}}
-    </Auk::CheckboxList>
+
+          {{#if this.showAllTypes}}
+            {{#each this.documentTypes as |documentType|}}
+              {{#if (not (includes documentType.uri this.defaultVisibleTypes))}}
+                <Group.Checkbox
+                  @value={{documentType}}
+                  @onChange={{fn this.toggleDocumentType documentType}}
+                >
+                  {{documentType.altLabel}}
+                </Group.Checkbox>
+              {{/if}}
+            {{/each}}
+          {{/if}}
+        </AuCheckboxGroup>
+      </AuCheckboxGroup>
+
+      <div class="au-u-margin-top-tiny">
+        <AuButton
+          {{on "click" (toggle "showAllTypes" this)}}
+          @skin="link"
+          class="au-u-h-functional au-u-padding-left-none"
+          @icon={{if this.showAllTypes "remove" "add"}}
+        >
+          {{if this.showAllTypes (t "hide-document-types") (t "show-all-document-types")}}
+        </AuButton>
+      </div>
+    {{/if}}
   </div>
 </div>
