--- a/app/templates/search/agendaitems.hbs
+++ b/app/templates/search/agendaitems.hbs
@@ -4,7 +4,7 @@
     <AuFieldset as |Fieldset|>
       <Fieldset.legend>{{t "type"}}</Fieldset.legend>
       <Fieldset.content>
-        <Auk::CheckboxList>
+        <AuCheckboxGroup> {{!-- Just use the group component here as a styling method as also using the included functionality would unnecessarily overcomplicate things --}}
           <AuCheckbox
             @checked={{this.includeNotas}}
             @onChange={{set this "includeNotas"}}
@@ -17,7 +17,7 @@
           >
             {{capitalize (t "announcement")}}
           </AuCheckbox>
-        </Auk::CheckboxList>
+        </AuCheckboxGroup>
       </Fieldset.content>
     </AuFieldset>
   </div>
@@ -25,14 +25,14 @@
     <AuFieldset as |Fieldset|>
       <Fieldset.legend>{{t "version"}}</Fieldset.legend>
       <Fieldset.content>
-        <Auk::CheckboxList>
+        <AuCheckboxGroup> {{!-- Just use the group component here as a styling method as also using the included functionality would unnecessarily overcomplicate things --}}
           <AuCheckbox
             @checked={{this.latestOnly}}
             @onChange={{set this "latestOnly"}}
           >
             {{t "only-on-final-agenda"}}
           </AuCheckbox>
-        </Auk::CheckboxList>
+        </AuCheckboxGroup>
       </Fieldset.content>
     </AuFieldset>
   </div>
