--- a/app/components/search/confidential-only.hbs
+++ b/app/components/search/confidential-only.hbs
@@ -2,14 +2,14 @@
   <AuFieldset as |Fieldset|>
     <Fieldset.legend>{{t "confidential"}}</Fieldset.legend>
     <Fieldset.content>
-      <Auk::CheckboxList>
+      <AuCheckboxGroup> {{!-- Just use the group component here as a styling method as also using the included functionality would unnecessarily overcomplicate things --}}
         <AuCheckbox
           @checked={{@confidentialOnly}}
           @onChange={{@onChange}}
         >
           {{t "search-confidential-only" objectVerb=(lowercase @objectVerb)}}
         </AuCheckbox>
-      </Auk::CheckboxList>
+      </AuCheckboxGroup>
     </Fieldset.content>
   </AuFieldset>
 </div>
