chore: rename Handtekenmap to Handtekeningen

--- a/app/components/m-header.hbs
+++ b/app/components/m-header.hbs
@@ -41,7 +41,7 @@
             {{/if}}
             {{#if this.isShownSignatureFolder}}
               <Auk::Tab @route="signatures" data-test-m-header-signatures>
-                {{t "signature-folder"}}
+                {{t "signatures"}}
               </Auk::Tab>
             {{/if}}
             {{#if (user-may "manage-settings")}}
