--- a/app/templates/signatures/index.hbs
+++ b/app/templates/signatures/index.hbs
@@ -7,7 +7,7 @@
       <Auk::Toolbar::Item>
         <div class="auk-o-flex auk-o-flex--vertical">
           <h4 class="auk-toolbar-complex__title">
-            {{t "signature-folder"}}
+            {{t "signatures"}}
           </h4>
         </div>
       </Auk::Toolbar::Item>
