--- a/app/styles/auk/_auk-additions.scss
+++ b/app/styles/auk/_auk-additions.scss
@@ -392,3 +392,11 @@ table tr.lt-expanded-row {
 .auk-checkbox-list + .auk-checkbox-list {
   margin-top: 1rem;
 }
+
+// Override default capitalization of first letter in paragraphs
+.au-c-content,
+.say-editor {
+  p::first-letter {
+    text-transform: none;
+  };
+}
