add check to see if user is KabinetsDossierbeheerder and has permission to view document

--- a/app/components/documents/document-preview/details-tab.hbs
+++ b/app/components/documents/document-preview/details-tab.hbs
@@ -3,5 +3,6 @@
     @piece={{@piece}}
     @documentContainer={{@documentContainer}}
     @didDeletePiece={{@didDeletePiece}}
+    @mayAccessKabinetDocument={{@mayAccessKabinetDocument}}
   />
 </div>
