--- a/app/components/documents/document-view.hbs
+++ b/app/components/documents/document-view.hbs
@@ -1,4 +1,4 @@
-{{#if @file}}
+{{#if (and @file @mayAccessKabinetDocument)}}
   {{#if this.isPdfDocument}}
     <object
       type="application/pdf"
