--- a/app/templates/document.hbs
+++ b/app/templates/document.hbs
@@ -4,4 +4,5 @@
   @markForSignature={{this.markForSignature}}
   @unmarkForSignature={{this.unmarkForSignature}}
   @didDeletePiece={{this.didDeletePiece}}
+  @mayAccessKabinetDocument={{this.mayAccessKabinetDocument}}
 />
