remove unused button on organizatinos index template add default padding in the user template on the mandatee selector add pre-loading of the selectedPerson in the user route

--- a/app/templates/settings/users/user.hbs
+++ b/app/templates/settings/users/user.hbs
@@ -160,7 +160,7 @@
               </Group>
               </AuToolbar>
           </Auk::Panel::Header>
-          <Auk::Panel::Body class="au-u-padding-none">
+          <Auk::Panel::Body>
             <Mandatees::MandateePersonSelector
               @onChange={{fn (mut this.selectedPerson)}}
               @multiple={{false}}
