feat: stop passing around markForSignature
We no longer need it, as there's no longer a need for solely marking a
piece. From now on, we always start the siging flow, so it makes more
sense to start that process in the specific component that is
responsible for it. Passing around these actions no longer makes sense.

--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -96,10 +96,7 @@
             {{/unless}}
           </Group.Item>
           {{#if this.signaturesEnabled}}
-              {{#if (or
-                 this.loadSignatureRelatedData.isRunning
-                 this.markForSignature.isRunning
-                 ) }}
+              {{#if this.loadSignatureRelatedData.isRunning}}
                 <Group.Item>
                   <div class="auk-loader au-u-margin-left-small" role="alert" aria-busy="true"></div>
                 </Group.Item>
@@ -142,13 +139,15 @@
                 </AuButton>
                 <AuHr />
                 {{#if this.mayCreateSignMarkingActivity}}
-                  <AuButton
+                  <AuLink
                     @skin="link"
-                    {{on "click" (perform this.markForSignature)}}
+                    @route="document"
+                    @model={{this.piece.id}}
+                    @query={{hash isSigning=true}}
                     role="menuitem"
                   >
                     {{t "present-for-signing"}}
-                  </AuButton>
+                  </AuLink>
                   <AuHr />
                 {{/if}}
                 <AuButton
