feat: add isSigning queryParam to document route
This allows us to link users directly to the signatures tab when they
want to start the signing process for a piece.

--- a/app/components/documents/document-preview/document-preview-modal.hbs
+++ b/app/components/documents/document-preview/document-preview-modal.hbs
@@ -37,6 +37,7 @@
           @transitionBack={{@onClose}}
           @didDeletePiece={{@didDeletePiece}}
           @onChangeFile={{perform this.loadFile}}
+          @activeTab={{@activeTab}}
         />
       </div>
     </div>
