--- a/app/templates/document.hbs
+++ b/app/templates/document.hbs
@@ -2,4 +2,5 @@
   @piece={{this.model}}
   @onClose={{this.transitionBack}}
   @didDeletePiece={{this.didDeletePiece}}
+  @activeTab={{this.activeTab}}
 />
